--- a/manifest.json
+++ b/manifest.json
@@ -5,20 +5,20 @@
 	"description":"The Only Social Shopping App",
 
 	"browser_action":{
-		"default_icon":"img/icon16.png",
+		"default_icon":"assets/img/icon16.png",
 		"default_title":"Shop Buddy",
 		"default_popup":"popup.html"
 	},
 
 	"background":
 	{
-		"scripts":["lib/jquery.js","assets/js/background.js"],
+		"scripts":[ "assets/js/database.js","lib/underscore-min.js","lib/jquery.min.js", "assets/js/facebook.js", "assets/js/twitter.js",  "assets/js/background.js"],
 		"persistent": true
 	},
 
 	"manifest_version": 2,
 
-	"content_security_policy":"script-src 'self';object-src 'self';connect-src https://graph.facebook.com/ https://www.googleapis.com/" "https://api.twitter.com",
+	"content_security_policy":"script-src 'self';object-src 'self';connect-src https://graph.facebook.com/ https://www.googleapis.com/ https://api.twitter.com",
 
 	"permissions":["tabs","unlimitedStorage","http://www.flipkart.com/*","https://graph.facebook.com/*","https://*.facebook.com/*","http://*.facebook.com/*", "https://*.twitter.com/*"],
 
@@ -33,7 +33,7 @@
 	"content_scripts":[
 	{
 		"matches":["http://www.flipkart.com/*"],
-		"js": ["lib/jquery.js","assets/js/inject.js", "assets/js/content_script.js"],
+		"js": ["lib/jquery.min.js","assets/js/inject.js", "assets/js/content_script.js"],
 		"run_at":"document_end"
 	}
 	]
